--- a/config-dir/logstash.1.conf
+++ b/config-dir/logstash.1.conf
@@ -1,33 +1,26 @@
 input {
- syslog {
-   id    => 'audit'
-   port  => 5154
-   codec  => "json"
+  syslog {
+   id      =>  "logs"
+   port    => 5154
+#   codec   => "json"
  }
-
 }
 filter {
- if [operation] == "update" {
-    mutate { add_tag => 'update' } 
- }
+  json {
+    source => "message"
+  }
+  if [operation] =~ /.+/ {
+    mutate { add_tag => 'change' } 
+  }
+
 }
 output {
-  if "update" in [tags] {
-    mongodb {
-      id         => "awx-update"
-      collection => "update"
-      database   => "logs"
-      uri        => "mongodb://172.17.0.2,172.17.0.3,172.17.0.4/logs?replicaSet=bla"
+    if "change" in [tags] { 
+      file {
+        path => "${DEST}"
+       # path => "/tmp/all.log"
+  #      codec => 'json'
+      }
     }
-  } else { 
-    mongodb {
-      id         => "awx-generic"
-      collection => "generic"
-      database   => "logs"
-      uri        => "mongodb://172.17.0.2,172.17.0.3,172.17.0.4/logs?replicaSet=bla"
-    }
-#    file {
-#      path => '/tmp/generic.txt'
-#    }
-  }
+
 }
